--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -39,11 +39,11 @@ body, body.res-nightmode:first-of-type {
 }
 
 .footer-parent {
-    height: 600px;
+    height: 717px;
     padding-top: 0px;
     text-align: center;
     width: 100%;
-    background-image: url(%%chaos%%);
+    background-image: url(%%footer%%);
     background-repeat: no-repeat;
     background-position: center;
     }
