--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -3,6 +3,18 @@
     display: none !important
 }
 
+/* We're discord's bitches now */
+
+/* The things we do for pretzels... */
+
+body:first-of-type {
+    background-image: url(%%dicks%%);
+    background-repeat:no-repeat;
+    background-position:center;    
+    height: 100%;
+    width: 100%;
+}
+
 hr {
     border-bottom: 1px solid #747474;
     border-top: none
