--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1821,3 +1821,22 @@ a[href|="/braeapplesocks"] {
  background-image: url(%%spritesheet12%%);
  background-position: -0px -2100px;  
 } 
+
+a[href|="/daisy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 194px;
+ height: 150px;
+ background-image: url(%%daisy%%);
+} 
+
+
+a[href|="/thisistoocute"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 128px;
+ height: 150px;
+ background-image: url(%%thisistoocute%%);
+} 
