--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -607,3 +607,11 @@ a[href|="/huggingcloudchaser"] {
   height:114px;
 }
 
+a[href|="/rdteehee"] {
+  background-image: url(%%rdteehee%%);
+  display:block; 
+  clear:none;
+  float:left;
+  width:175px;
+  height:153px;
+}
