--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1840,3 +1840,134 @@ a[href|="/thisistoocute"] {
  height: 150px;
  background-image: url(%%thisistoocute%%);
 } 
+
+
+a[href|="/twileon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 139px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -0px;  
+}
+ 
+a[href|="/rariteon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/pinkeon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 196px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/fluttereon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 143px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/dasheon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 147px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/appleon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 166px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavimincinno"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 158px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/vinylwhismur"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 135px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/lyrascared"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 279px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1200px;  
+} 
+
+a[href|="/octacchug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1350px;  
+} 
+
+a[href|="/octalyrahug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1500px;  
+} 
+
+a[href|="/lyrahastavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 145px;
+ height: 200px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1650px;  
+} 
+
+a[href|="/luneon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 162px;
+ height: 150px;
+ background-image: url(%%spritesheet13%%);
+ background-position: -0px -1850px;  
+} 
