--- a/source-css/cianimotes.css
+++ b/source-css/cianimotes.css
@@ -1,3 +1,5 @@
+a[href|="/nopls"] { display: block; clear: none; float: left; background-image: url(%%nopls%%); width: 188px; height: 200px; background-position: -0px -0px }
+
 a[href|="/taviplay"] { display: block; clear: none; float: left; background-image: url(%%taviplay%%); width: 101px; height: 120px; background-position: -0px -0px }
 
 a[href|="/popcorn"] { display: block; clear: none; float: left; background-image: url(%%popcorn%%); width: 98px; height: 150px; background-position: -0px -0px }
