--- a/source-css/comeinside.css
+++ b/source-css/comeinside.css
@@ -55,7 +55,7 @@ html:lang(en) .side:after { width: 415px; height: 507px; background-image: url(%
     } 
 
 #header-img {
-    margin-top: 105px;
+    margin-top: 100px;
     margin-left: 0px;
     position: absolute
     }
@@ -66,7 +66,7 @@ html:lang(en) .side:after { width: 415px; height: 507px; background-image: url(%
     font-size: 0px;
     padding: 100px 155px 0 0;
     color: #364657;
-    left: 55px;
+    left: 60px;
     position: absolute;
     top: 80px;
     text-indent: -9999px}
@@ -128,6 +128,30 @@ html:lang(en) .side .usertext[id$="9"] a[href="/cibg-pony"] { background:url(%%c
 
 
 /* ------ Emotes! --------- */
+
+a[href|='/ajterror'], a[href|='/cookieninja'], a[href|='/dashready'], a[href|='/disapprovowl'], a[href|='/duckface'], a[href|='/flutterterror'], a[href|='/seewhatyoudidthere'], a[href|='/ldsalute'], a[href|='/rariderp'], a[href|='/shyohu'], a[href|='/skepticaldash'], a[href|='/spikemad'], a[href|='/twifetish'], a[href|='/twiwhatever'], a[href|='/scepter']{
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%gsheet%%)
+    } 
+a[href|='/scepter']  {width:59px; height:175px; background-position: -1936px -0px}
+a[href|='/ajterror'] {width:211px; height:175px; background-position: -2px -2px}
+a[href|='/cookieninja'] {width:95px; height:150px; background-position: -215px -2px}
+a[href|='/dashready'] {width:223px; height:150px; background-position: -312px -2px}
+a[href|='/disapprovowl'] {width:61px; height:130px; background-position: -537px -2px}
+a[href|='/duckface'] {width:125px; height:125px; background-position: -600px -2px}
+a[href|='/flutterterror'] {width:118px; height:125px; background-position: -727px -2px}
+a[href|='/seewhatyoudidthere'] {width:152px; height:150px; background-position: -847px -2px}
+a[href|='/ldsalute'] {width:150px; height:122px; background-position: -1001px -2px}
+a[href|='/rariderp'] {width:132px; height:150px; background-position: -1153px -2px}
+a[href|='/shyohu'] {width:140px; height:150px; background-position: -1287px -2px}
+a[href|='/skepticaldash'] {width:102px; height:125px; background-position: -1429px -2px}
+a[href|='/spikemad'] {width:79px; height:125px; background-position: -1533px -2px}
+a[href|='/twifetish'] {width:217px; height:200px; background-position: -1614px -2px}
+a[href|='/twiwhatever'] {width:99px; height:125px; background-position: -1833px -2px}
+
+
 
 a[href|='/bonangry'], a[href|='/lunahate'], a[href|='/lyracringe'], a[href|='/lyrawink'], a[href|='/psychiatrix'], a[href|='/rarioh'], a[href|='/rosecringe'], a[href|='/shythink'], a[href|='/skepticalpie'], a[href|='/twigrump'],a[href|='/lyraexcited']{
 
@@ -385,6 +409,8 @@ body.res a.author[href$="V17Ds"] {color:#FF9EF2!important}
 /* Names */
 
 /* here first */
+a.author[href$=maku450],
+a.author[href$=Saltbearer],
 a.author[href$=XelNaga],
 a.author[href$=EvanMacIan],
 a.author[href$=SirCinnamon],
@@ -405,6 +431,8 @@ content: "";
 }
 
 /* here second */
+a.author[href$=maku450]:before,
+a.author[href$=Saltbearer]:before,
 a.author[href$=EvanMacIan]:before,
 a.author[href$=SirCinnamon]:before,
 a.author[href$=XelNaga]:before,
@@ -422,8 +450,9 @@ visibility:visible!important;
 }
 
 /*and the replacement*/
+a.author[href$=maku450]:before {content:"maku"}
 a.author[href$=EvanMacIan]:before {content:"Mr. Califag MacIan"}
-
+a.author[href$=Saltbearer]:before {content:"S_1000X9_11X2_2"}
 a.author[href$=SirCinnamon]:before {content:"King Cinnamon"}
 a.author[href$=XelNaga]:before {content:"Twi`Naga"}
 a.author[href$=Princess_Molestia_]:before {content:"Princess Molestia"}
@@ -455,7 +484,7 @@ a.author[href$="videogamewonder"]:after {content:" (le)teral fempire shill"}
 /**********************/
 /*********Flair**********/
 /**********************/
-.flair
+html:lang(en) .flair
 {
 display: inline-block;
 border: 0;
@@ -463,56 +492,55 @@ border-radius: 0;
 background: transparent;
 font-weight: 700;
 }
-.flair:before
+html:lang(en) .flair:before
 {
 background-image: url(%%flairsheet%%);
-background-position: 0px 0px;
 content: "";
 display: inline-block;
 width: 40px;
 height: 40px;
 background-repeat: no-repeat;
 }
-.flair-pinkie:before { background-position: 0px 0px}
-.flair-rarity:before { background-position: 0px -40px}
-.flair-whooves:before { background-position: 0px -80px}
-.flair-shy:before { background-position: 0px -120px}
-.flair-twi:before { background-position: 0px -160px}
-.flair-vinyl:before { background-position: 0px -200px}
-.flair-tia:before { background-position: 0px -240px}
-.flair-lyra:before { background-position: 0px -280px}
-.flair-aj:before { background-position: 0px -320px}
-.flair-cadance:before { background-position: 0px -360px}
-.flair-luna:before { background-position: 0px -400px}
-.flair-cheerilee:before { background-position: 0px -440px}
-.flair-chrys:before { background-position: 0px -480px}
-.flair-derpy:before { background-position: 0px -520px}
-.flair-colgate:before { background-position: 0px -560px}
-.flair-dash:before { background-position: 0px -600px}
-.flair-twinaga:before { background-position: 0px -640px}
-.flair-codenametoon:before { background-position: 0px -680px}
-.flair-QdwachMD:before { background-position: 0px -720px}
-.flair-flare561:before { background-position: 0px -760px}
-.flair-rose:before { background-position: 0px -800px}
-.flair-OOTDL:before { background-position: 0px -840px}
-.flair-V17Ds:before { background-position: 0px -880px}
-.flair-BeatBawx:before { background-position: 0px -920px}
-.flair-sweetie:before { background-position: 0px -960px}
-.flair-scoots:before { background-position: 0px -1000px}
-.flair-pinkamina:before { background-position: 0px -1040px}
-.flair-milkyway:before { background-position: 0px -1080px}
-.flair-surprise:before { background-position: 0px -1120px}
-.flair-cloudchaser:before { background-position: 0px -1160px}
-.flair-Jeroknite:before { background-position: 0px -1200px}
-.flair-trixie:before { background-position: 0px -1240px}
-.flair-spitfire:before { background-position: 0px -1280px}
-.flair-flitter:before { background-position: 0px -1320px}
-.flair-spike:before { background-position: 0px -1360px}
-.flair-molestia:before { background-position: 0px -1400px}
-.flair-fluffy:before { background-position: 0px -1440px}
-.flair-Generic:before { background-position: 0px -1480px}
-.flair-dda1add:before { background-position: 0px -1520px}
-.flair-DevaKitty:before { background-position: 0px -1560px}
+html:lang(en) .flair-pinkie:before { background-position: 0px 0px}
+html:lang(en) .flair-rarity:before { background-position: 0px -40px}
+html:lang(en) .flair-whooves:before { background-position: 0px -80px}
+html:lang(en) .flair-shy:before { background-position: 0px -120px}
+html:lang(en) .flair-twi:before { background-position: 0px -160px}
+html:lang(en) .flair-vinyl:before { background-position: 0px -200px}
+html:lang(en) .flair-tia:before { background-position: 0px -240px}
+html:lang(en) .flair-lyra:before { background-position: 0px -280px}
+html:lang(en) .flair-aj:before { background-position: 0px -320px}
+html:lang(en) .flair-cadance:before { background-position: 0px -360px}
+html:lang(en) .flair-luna:before { background-position: 0px -400px}
+html:lang(en) .flair-cheerilee:before { background-position: 0px -440px}
+html:lang(en) .flair-chrys:before { background-position: 0px -480px}
+html:lang(en) .flair-derpy:before { background-position: 0px -520px}
+html:lang(en) .flair-colgate:before { background-position: 0px -560px}
+html:lang(en) .flair-dash:before { background-position: 0px -600px}
+html:lang(en) .flair-twinaga:before { background-position: 0px -640px}
+html:lang(en) .flair-codenametoon:before { background-position: 0px -680px}
+html:lang(en) .flair-QdwachMD:before { background-position: 0px -720px}
+html:lang(en) .flair-flare561:before { background-position: 0px -760px}
+html:lang(en) .flair-rose:before { background-position: 0px -800px}
+html:lang(en) .flair-OOTDL:before { background-position: 0px -840px}
+html:lang(en) .flair-V17Ds:before { background-position: 0px -880px}
+html:lang(en) .flair-BeatBawx:before { background-position: 0px -920px}
+html:lang(en) .flair-sweetie:before { background-position: 0px -960px}
+html:lang(en) .flair-scoots:before { background-position: 0px -1000px}
+html:lang(en) .flair-pinkamina:before { background-position: 0px -1040px}
+html:lang(en) .flair-milkyway:before { background-position: 0px -1080px}
+html:lang(en) .flair-surprise:before { background-position: 0px -1120px}
+html:lang(en) .flair-cloudchaser:before { background-position: 0px -1160px}
+html:lang(en) .flair-Jeroknite:before { background-position: 0px -1200px}
+html:lang(en) .flair-trixie:before { background-position: 0px -1240px}
+html:lang(en) .flair-spitfire:before { background-position: 0px -1280px}
+html:lang(en) .flair-flitter:before { background-position: 0px -1320px}
+html:lang(en) .flair-spike:before { background-position: 0px -1360px}
+html:lang(en) .flair-molestia:before { background-position: 0px -1400px}
+html:lang(en) .flair-fluffy:before { background-position: 0px -1440px}
+html:lang(en) .flair-Generic:before { background-position: 0px -1480px}
+html:lang(en) .flair-dda1add:before { background-position: 0px -1520px}
+html:lang(en) .flair-DevaKitty:before { background-position: 0px -1560px} 
 /* For anyone with no flair, or flair disabled, this will give them missingno flair.
     Listed before the rest of the username shit so it will be overridden by manual flair additions. */
 :not(.flair) + a.author:before  {
@@ -546,16 +574,6 @@ span.age::before {visibility:visible!important;font-size:8pt;content:'A communit
     background-position: 0px -60px !important;
 }
 
-.side a[href="http://np.reddit.com/r/ComeInside"] {
-    display: block;
-    background-color: lightgrey;
-    color: black!important;
-    border: 1px solid red;
-    border-radius: 3px;
-    padding: 4px 0 4px 4px;
-    margin: 2px 0;}
-
-.side a[href="http://www.reddit.com/r/ComeInside"] {display:none}
 
 /*------ nonpone ----- */
 /*------------------------  Changes background ------------------------------- */
@@ -614,26 +632,146 @@ html:lang(np) #header-img {display:none!important}
 
 html:lang(np) #header-img-a {display:inline-block!important;margin-top: 100px; height: 95px; width: 108px; background-image:url(%%npheader%%)!important}
 
-html:lang(np) .flair{display:none!important}
 
-html:lang(np) .flair:before{display:none!important}
+/* For anyone with no flair, or flair disabled, this will give them GitS flair.
+    Listed before the rest of the username shit so it will be overridden by manual flair additions. */
+html:lang(np) :not(.flair) + a.author:before  {
+    content: " ";
+    background: none;
+    color: black;
+    border: 0;
+    border-radius: 0;
+    background-image: url(%%npflairsheet%%);
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 40px;
+    height: 38px;
+    background-position: -2px -371px
+}
 
-html:lang(np) :not(.flair) + a.author:before  {display:none!important}
+
+/**********************/
+/*********Flair**********/
+/**********************/
+html:lang(np) .flair
+{
+display: inline-block;
+border: 0;
+border-radius: 0;
+background: transparent;
+font-weight: 700;
+}
+html:lang(np) .flair:before
+{
+background-image: url(%%npflairsheet%%);
+content: "";
+display: inline-block;
+background-repeat: no-repeat;
+}
+html:lang(np) .flair-pinkie:before {width:32px; height:40px; background-position: -2px -168px}
+html:lang(np) .flair-rarity:before {width:40px;height:38px;background-position:-2px -44px}
+html:lang(np) .flair-whooves:before {width:40px;height:40px;background-position:-2px -84px}
+html:lang(np) .flair-shy:before {width:40px;height:40px;background-position:-2px -126px}
+html:lang(np) .flair-twi:before {width:32px;height:40px;background-position:-2px -168px}
+html:lang(np) .flair-vinyl:before {width:40px;height:40px;background-position:-2px -210px}
+html:lang(np) .flair-tia:before {width:40px;height:40px;background-position:-2px -865px}
+html:lang(np) .flair-lyra:before {width:40px;height:40px;background-position:-2px -287px}
+html:lang(np) .flair-aj:before {width:40px;height:40px;background-position:-2px -329px}
+html:lang(np) .flair-cadance:before {width:40px;height:40px;background-position:-2px -661px}
+html:lang(np) .flair-luna:before {width:40px;height:40px;background-position:-2px -783px}
+html:lang(np) .flair-cheerilee:before {width:40px;height:40px;background-position:-2px -451px}
+html:lang(np) .flair-chrys:before {width:35px;height:40px;background-position:-2px -493px}
+html:lang(np) .flair-derpy:before {width:41px;height:41px;background-position:-2px -535px}
+html:lang(np) .flair-colgate:before {width:40px;height:40px;background-position:-2px -577px}
+html:lang(np) .flair-dash:before {width:38px;height:40px;background-position:-2px -619px}
+html:lang(np) .flair-twinaga:before {width:40px;height:36px;background-position:-2px -947px}
+html:lang(np) .flair-codenametoon:before {width:40px;height:40px;background-position:-2px -703px}
+html:lang(np) .flair-QdwachMD:before {width:40px;height:36px;background-position:-2px -745px}
+html:lang(np) .flair-flare561:before {width:40px;height:38px;background-position:-2px -783px}
+html:lang(np) .flair-rose:before {width:40px;height:40px;background-position:-2px -907px}
+html:lang(np) .flair-OOTDL:before {width:40px;height:40px;background-position:-2px -865px}
+html:lang(np) .flair-V17Ds:before {width:40px;height:38px;background-position:-2px -907px}
+html:lang(np) .flair-BeatBawx:before {width:40px;height:40px;background-position:-2px -2px}
+html:lang(np) .flair-sweetie:before {width:40px;height:38px;background-position:-2px -44px}
+html:lang(np) .flair-scoots:before {width:40px;height:40px;background-position:-2px -2px}
+html:lang(np) .flair-pinkamina:before {width:40px;height:40px;background-position:-2px -126px}
+html:lang(np) .flair-milkyway:before {width:32px;height:40px;background-position:-2px -168px}
+html:lang(np) .flair-surprise:before {width:40px;height:40px;background-position:-2px -703px}
+html:lang(np) .flair-cloudchaser:before {width:40px;height:33px;background-position:-2px -252px}
+html:lang(np) .flair-Jeroknite:before {width:40px;height:40px;background-position:-2px -287px}
+html:lang(np) .flair-trixie:before {width:40px;height:40px;background-position:-2px -329px}
+html:lang(np) .flair-spitfire:before {width:40px;height:40px;background-position:-2px -823px}
+html:lang(np) .flair-flitter:before {width:40px;height:40px;background-position:-2px -409px}
+html:lang(np) .flair-spike:before {width:40px;height:40px;background-position:-2px -451px}
+html:lang(np) .flair-molestia:before {width:35px;height:40px;background-position:-2px -493px}
+html:lang(np) .flair-fluffy:before {width:40px;height:40px;background-position:-2px -535px}
+html:lang(np) .flair-Generic:before {width:40px;height:36px;background-position:-2px -745px}
+html:lang(np) .flair-dda1add:before {width:38px;height:40px;background-position:-2px -619px}
+html:lang(np) .flair-DevaKitty:before {width:40px;height:40px;background-position:-2px -661px}
+
+/*--- Sidebar buttons ---*/
+
+.res-nightmode .side a[href="http://np.reddit.com/r/ComeInside"] {
+    display: block;
+    font-family: Verdana;
+    font-weight: bold;
+    background-color: #393939;
+    color: #1b83bb !important;
+    font-size: 14px;
+    border: 2px solid #151515;
+    border-radius: 8px;
+    padding: 6px 6px 6px 6px;
+    margin: 2px 0;}
+
+.side a[href="http://np.reddit.com/r/ComeInside"] {
+    display: block;
+    font-family: Verdana;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #87EA2D;
+    color: #336699!important;
+    border: 2px solid #008013;
+    border-radius: 8px;
+    padding: 6px 6px 6px 6px;
+    margin: 2px 0;}
+
+.side a[href="http://www.reddit.com/r/ComeInside"] {display:none}
+
+
+.side a[href="http://www.reddit.com/r/ComeInside"] {display:none}
+
 
 html:lang(np) .side a[href="http://np.reddit.com/r/ComeInside"] {display:none}
 
+html:lang(np) .res-nightmode .side a[href="http://www.reddit.com/r/ComeInside"] {
+
+    display: block;
+    font-family: Verdana;
+    font-weight: bold;
+    background-color: #393939;
+    color: #1b83bb !important;
+    font-size: 14px;
+    border: 2px solid #151515;
+    border-radius: 8px;
+    padding: 6px 6px 6px 6px;
+    margin: 2px 0;}
+
 html:lang(np) .side a[href="http://www.reddit.com/r/ComeInside"] {
     display: block;
-    background-color: lightgrey;
-    color: black!important;
-    border: 1px solid red;
-    border-radius: 3px;
-    padding: 4px 0 4px 4px;
+    font-family: Verdana;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #87EA2D;
+    color: #336699!important;
+    border: 2px solid #008013;
+    border-radius: 8px;
+    padding: 6px 6px 6px 6px;
     margin: 2px 0;}
+
 
 /* Nightmode fixes for the background */
 .content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;} 
 body.res-nightmode:first-of-type > .content {background-color: transparent!important;}
 .res-nightmode body{background-color: #222222!important;}
-html:lang(np)  body.res-nightmode{background-color: #222222!important;}
+html:lang(np)  .res-nightmode{background-color: #222222!important;}
 
